fixing spacing between post cards

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -53,7 +53,7 @@
 	.posts {
 		display: flex;
 		flex-direction: column;
-		gap: 2px;
+		gap: 20px;
 		padding-left: 0px;
 		margin-top: 0rem;
 
@@ -64,6 +64,7 @@
 			/* IE 10 and IE 11 */
 			user-select: none;
 			/* Standard syntax */
+			margin: 0rem;
 		}
 
 		a {
@@ -134,7 +135,7 @@
 	flex-direction: column;
 	align-items: center;
 	margin: 90px 0px;
-	gap: 10px;
+	gap: 20px;
 }
 
 .posts-page p,
@@ -165,6 +166,7 @@
 		/* IE 10 and IE 11 */
 		user-select: none;
 		/* Standard syntax */
+		margin: 0rem;
 	}
 
 	a {
